minor email/whisper icon alignment fix

--- a/app/assets/stylesheets/common/base/topic-post.scss
+++ b/app/assets/stylesheets/common/base/topic-post.scss
@@ -520,10 +520,6 @@ aside.quote {
     margin-right: 0;
   }
   &.via-email,
-  &.whisper {
-    line-height: $line-height-medium;
-  }
-  &.via-email,
   &.whisper,
   &.post-locked {
     .d-icon {
